BugTrack/2412 Wrap text in pre elements

--- a/skin/tdiary.css
+++ b/skin/tdiary.css
@@ -463,6 +463,10 @@ td.vote_td2 {
 	color:inherit;
 	background-color:#DDE5FF;
 }
+pre {
+	white-space:pre-wrap;
+	word-wrap:break-word;
+}
 
 @media print {
   img#logo,
